# OpenGL-Hpp

./: .gitignore  .gitmodules  README.md  cpp.py  generate-glad.sh  glregistry.py  hppgenerator.py  main.py  main2.py
oglhpp/: glregistry.py  hppgenerator.py  util.py
oglhppgen/: c_generator.py  generator.py  model.py
tests/test-dynamicLoading/: .gitignore  CMakeLists.txt  main.cpp
tests/test-gl10/: .gitignore  CMakeLists.txt  gl.hpp  test-gl10.cpp
